// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IndicatorCircle /> should apply the given color 1`] = `
<IndicatorCircle
  color="#fff"
  paused={false}
  size={32}
  strokeWidth={4}
>
  <svg
    className="css-12jxe4c"
    data-test-id="loadingIndicator"
    height={32}
    viewBox="25 25 50 50"
    width={32}
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      className="css-1srioz5"
      cx="50"
      cy="50"
      r="20"
    />
  </svg>
</IndicatorCircle>
`;

exports[`<IndicatorCircle /> should apply the given size 1`] = `
<svg
  className="css-12jxe4c"
  data-test-id="loadingIndicator"
  height={32}
  viewBox="25 25 50 50"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    className="css-1u0o3o9"
    cx="50"
    cy="50"
    r="20"
  />
</svg>
`;
